# birding-vibing

./: .cursorrules  .env.example  .gitignore  README.md  TESTING_REPORT.md  clustering_visual_proof.html  generate_visual_proof.py  pyproject.toml  run.sh  run_tests.sh  verify_clustering.py
.cursor/plans/: fix-date-filter-defaults-ff54af83.plan.md  migrate-to-streamlit-secrets-toml-001b0143.plan.md
.cursor/rules/: browser-testing.mdc  uv-usage.mdc
.devcontainer/: devcontainer.json
data/: test_birds.duckdb
docs/: API_CHANGES_LOG.md  API_TROUBLESHOOTING.md  DATABASE_SCHEMA.md  DATABASE_SETUP.md  DATA_INGESTION.md
scripts/: load_historical_data.py  update_database.py  validate_data.py
src/: __init__.py  api_client.py  app.py  config.py  locations.py
src/api/: __init__.py  artportalen_client.py  data_adapter.py  gbif_client.py  reverse_geocode.py  unified_client.py
src/app_components/: __init__.py  database_management.py
src/database/: __init__.py  connection.py  ingestion.py  queries.py  schema.py
tests/: README.md  TEST_RESULTS.md  TEST_SUMMARY.md  __init__.py  test_api_client.py  test_database_connection.py  test_database_ingestion.py  test_database_queries.py  test_database_schema.py  test_filters.py  test_integration.py  test_unified_client_integration.py
